src2/objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Action Item UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assign_to_Queue__c</fullName>
        <label>Assign to Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assign_To_Queue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActionItem_Assignment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_From_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email From Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>equals</operation>
                <value>EMAIL_FROM_ADDRESS</value>
            </filterItems>
            <filterItems>
                <field>$Source.Sales_Org_Code__c</field>
                <operation>equals</operation>
                <valueField>LST_OF_VAL__c.Sales_Org_Code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LST_OF_VAL__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Step_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Step Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory_Entities__c</fullName>
        <label>Mandatory Entities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Standing Order</fullName>
                </value>
                <value>
                    <fullName>My Machine</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send eMail</fullName>
                </value>
                <value>
                    <fullName>Click-2-Call</fullName>
                </value>
                <value>
                    <fullName>Open URL</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>THIRD_PARTY_CARRIER</fullName>
                    <label>Third Party - Carrier</label>
                </value>
                <value>
                    <fullName>THIRD_PARTY_WAREHOUSE</fullName>
                    <label>Third Party - Warehouse</label>
                </value>
                <value>
                    <fullName>THIRD_PARTY_REPAIR_CENTER</fullName>
                    <label>Third Party - Repair Center</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Procedure</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Friendly_Name__c</fullName>
        <label>URL Friendly Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_To_Open__c</fullName>
        <label>URL To Open</label>
        <type>TextArea</type>
    </fields>
    <label>Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Positive Comments</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>B2P14_Promotion_Issue_Management</fullName>
        <columns>Sequence__c</columns>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>First_Step_Item__c</columns>
        <columns>Assign_to_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code__c</field>
            <operation>equals</operation>
            <value>B2P14</value>
        </filters>
        <label>B2P14 Promotion Issue Management</label>
    </listViews>
    <listViews>
        <fullName>Machine_Pick_Up_List</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Action_Item_UUID__c</columns>
        <columns>Code__c</columns>
        <columns>First_Step_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>NN09</value>
        </filters>
        <label>Machine Pick-Up List</label>
    </listViews>
    <listViews>
        <fullName>Step_Waiting_for_Customer</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Case_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Customer</value>
        </filters>
        <label>Step Waiting for Customer</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Click2Call</fullName>
        <active>true</active>
        <label>Activity Click2Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Generic</fullName>
        <active>true</active>
        <label>Activity Generic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Open_URL</fullName>
        <active>true</active>
        <label>Activity Open URL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Send_Email</fullName>
        <active>true</active>
        <label>Activity Send Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procedure</fullName>
        <active>true</active>
        <label>Procedure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resolution</fullName>
        <active>true</active>
        <label>Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step</fullName>
        <active>true</active>
        <label>Step</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Activity_Open_URL</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Activity_Open_URL&apos;,
ISBLANK(  URL_To_Open__c  )
)</errorConditionFormula>
        <errorMessage>URL must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activity_Send_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Activity_Send_Email&apos;,
ISBLANK(  Email_Template_Id__c  )
)</errorConditionFormula>
        <errorMessage>Email Template must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assignment_Type_To_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;Step&apos;, 
ISBLANK(TEXT( Assign_to_Queue__c )),
TEXT(Assignment_Type__c )= &apos;Queue&apos; 
)</errorConditionFormula>
        <errorMessage>Assign to Queue field must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assignment_Type_To_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Step&apos;,
ISBLANK( Assign_to_User__c  ),
TEXT(Assignment_Type__c )= &apos;User&apos; 
)</errorConditionFormula>
        <errorMessage>Assign to User field must be set</errorMessage>
    </validationRules>
</CustomObject>